# Flit

./: .gitignore  Cargo.toml  Dockerfile  kei-mcp-write-test.md  readme.md  render.yaml
.github/workflows/: ci.yml  release.yml
shortcuts/: android-guide.md  ios-shortcut-guide.md
src/: main.rs
static/: app.js  index.html  style.css
