[package]
name = "flit-server"
version = "0.2.0"
edition = "2024"
description = "Frictionless cross-device drop inbox (Stardance)"
license = "MIT"

[[bin]]
name = "flit-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"